# py-wasm-plugin

./: Cargo.toml
src/: lib.rs
