[package]
name = "py-wasm-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.0", features = ["generate-import-lib"] } # ["full", "auto-initialize",]}#
wasm-minimal-protocol = { path = "../wasm-minimal-protocol/" }

[package.metadata.cross]