[package]
name = "py-wasm-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", no-default-features = true, features = ["freeze-stdlib", "stdlib"] }
wasm-minimal-protocol = { path = "../wasm-minimal-protocol/" }
